# LabDevops-front

./: .dockerignore  .env.template  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-push.yml  deploy.yml  validate.yml
deploy/: instance_setup.sh
devopsdemo/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_devopsdemo.py
web/: views.py
web/templates/: index.html
web/tests/: test_devopsdemo.py
