[project]
name = "LabDevops"
version = "0.1.0"
description = "A sample project to learn CI/CD"
authors = [{ name = "Eduardo Bray", email = "ed.bray@duocuc.cl" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "asgiref (==3.9.1)",
    "certifi (==2025.10.5)",
    "charset-normalizer (==3.4.3)",
    "Django (==5.2.5)",
    "gunicorn (==23.0.0)",
    "idna (==3.10)",
    "packaging (==25.0)",
    "requests (==2.32.5)",
    "sqlparse (==0.5.3)",
    "urllib3 (==2.5.0)",
    "uv>=0.9.5",
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "coverage (>=7.10,<8.0)",
    "pytest (>=8.4,<9.0)",
    "pytest-django (>=4.11,<5.0)",
    "ruff (>=0.14.0,<0.15.0)",
]
tests = [
    "pytest (>=8.4,<9.0)",
    "pytest-django (>=4.11,<5.0)",
    "coverage (>=7.10,<8.0)",
]
lint = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.html]
directory = "site/htmlcov"

[tool.uv]
package = false

[tool.black]
line-length = 88
